Add site to pages

--- a/src/index.pug
+++ b/src/index.pug
@@ -8,6 +8,8 @@ html(lang="en")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     title Portfolio | main page
   body
+
+    h1 Portfolio of Sergei
     .wrapper
       .maincontent
         +image('content/user.jpg', 'user-pic')
