New sectiones added. Added some layout and mixins. Changed foto

--- a/src/mixins.pug
+++ b/src/mixins.pug
@@ -1,7 +1,15 @@
 mixin icon(name, className)
-  - var icon = require(`images/icons/${name}.svg`);
-  svg(class=className viewBox=icon.viewBox preserveAspectRatio="none")
-    use(xlink:href=icon.url)
+    - var icon = require(`images/icons/${name}.svg`);
+    svg(class=className viewBox=icon.viewBox preserveAspectRatio="none")
+        use(xlink:href=icon.url)
 
 mixin image(path, className)
-  img(src=require(`images/${path}`) class=className)
+    img(src=require(`images/${path}`) class=className)
+
+mixin nav(className, items, activeItem)
+    nav(class=`${className}`)
+        .container
+            ul(class=`${className}__list`)
+                each item, i in items
+                    li(class=`${className}__item` + ( (i === activeItem ) ? ` ${className}__item_active` : '' ) )
+                        a(class=`${className}__link` href='#')= item
