--- a/src/index.pug
+++ b/src/index.pug
@@ -2,16 +2,25 @@ include ./mixins.pug
 
 <!DOCTYPE html>
 html(lang="en")
-  head
+head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     title Portfolio | main page
-  body
-
-    h1 Portfolio of Sergei
+body
     .wrapper
-      .maincontent
-        +image('content/user.jpg', 'user-pic')
-        +icon('link', 'link-class')
-        .icon-bg
+        .maincontent
+            //- +image('content/user.jpg', 'user-pic')
+            //- +icon('link', 'link-class')
+            //- .icon-bg
+            //- include ./sections/header.pug
+        include ./sections/main.pug
+        include ./sections/about.pug
+        include ./sections/skills.pug
+        include ./sections/works.pug
+
+        .wrapper-bottom
+            include ./sections/reviews.pug
+            include ./sections/contact.pug
+    include ./sections/footer
+
