Added new pug elements

--- a/src/index.pug
+++ b/src/index.pug
@@ -20,6 +20,7 @@ body
         include ./sections/works.pug
 
         .wrapper-bottom
+            .bottom__image
             include ./sections/reviews.pug
             include ./sections/contact.pug
     include ./sections/footer
