--- a/src/sections/about.pug
+++ b/src/sections/about.pug
@@ -16,8 +16,8 @@ section.about
                         .user-data__item_field 14 ноября 1991
     .about__right
         .user-about
-            .user-about__greeting
-            .user-about__name
+            .user-about__greeting Привет, меня зовут
+            .user-about__name Сергей Дмитриев
             .user-about__content
                 p   Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus atque adipisci velit necessitatibus dolorem corporis vero neque impedit non amet!
                 p   Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe corrupti, fuga dignissimos at officia non tempora similique esse repudiandae numquam.
