--- a/src/sections/skills.pug
+++ b/src/sections/skills.pug
@@ -1,22 +1,22 @@
 section.skills
     h2.skills__title Чем я могу быть полезен вам
-        .content
+    .container
+        .skills-content
             p Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis iste illo pariatur blanditiis architecto vel similique aperiam incidunt corporis quia?
-
-        .skills__parts
             .skills__part
                 h3.skills__part_title Front-end
                 .skills__part_content
                     ul.scills__list
-                        li.skills__item HTML5
-                        li.skills__item CSS3
-                        li.skills__item Javascript
-                        li.skills__item Jquery и Vue.js
-            h3.skills__part
-                .skills__part_title Workflow
+                        each skill in (['HTML5', 'CSS3', 'Javascript', 'Jquery и Vue.js'])
+                            li.skills__item
+                                .skills__item_container
+                                    .skills__item_level= skill
+            .skills__part
+                h3.skills__part_title Workflow
                 .skills__part_content
                     ul.scills__list
-                        li.skills__item Git
-                        li.skills__item Terminal
-                        li.skills__item Gulp
-                        li.skills__item Webpack
+                        each skill in (['GIT', 'Terminal', 'Gulp', 'Webpack'])
+                            li.skills__item
+                                .skills__item_container
+                                    .skills__item_level= skill
+    .skills-image
