--- a/src/sections/main.pug
+++ b/src/sections/main.pug
@@ -1,10 +1,16 @@
 section.main
+    .parallax
+        .parallax__heaven
+        .parallax__mountain
+        .parallax__train
+        .parallax__field
 
     include header
 
     .user
         .user__info Личный сайт веб разработчика
         h1.user__name Сергей Дмитриев
+
     .scroll
         .scroll__title Скролл
         .scroll__icon
