--- a/src/sections/header.pug
+++ b/src/sections/header.pug
@@ -12,5 +12,5 @@ header.header
         ul.socials__list
             each social in ['insta', 'vk', 'github']
                 li.socials__item
-                    a(class=`social__list.social__list_${social}` href="#")
+                    a(class=`socials__list.socials__list_${social}` href="#")
                         +icon(`${social}`, `${social}`)
