--- a/src/styles/blocks/main.pcss
+++ b/src/styles/blocks/main.pcss
@@ -1,39 +1,66 @@
-.parallax {
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    height: 1000px;
+.main {
+    padding: 65px 160px;
+    background: url("../images/bg/bg_main.jpg") top center no-repeat;
+    background-size: cover;
+    min-height: 100vh;
+    min-width: 100vw;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
 
-    &__heaven {
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        /* background-image: url(".src/images/parallax/heaven.png"); */
-        
+    .user {
+        display: inline-block;
+
+        &__info {
+            opacity: 0.4;
+            color: #fff;
+            font-size: 18px;
+            font-weight: 400;
+            line-height: 30px;
+            display: inline-block;
+            width: 165px;
+            vertical-align: top;
+        }
+
+        &__name {
+            display: inline-block;
+            padding: 0;
+            width: 500px;
+            color: #fff;
+            font-size: 72px;
+            font-weight: 900;
+            line-height: 60px;
+            text-align: left;
+            margin-left: 60px;
+        }
     }
-    &__mountain {
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
+
+    .scroll {
+        &__title {
+            color: #fff;
+            font-size: 18px;
+            font-weight: 400;
+            line-height: 30px;
+            display: inline-block;
+            vertical-align: top;
+        }
+
+        &__icon {
+            display: inline-block;
+            width: 30px;
+            .arrow-down {
+                height: 30px;
+                fill: #ffffff;
+            }
+        }
     }
-    &__train {
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-    }
-    &__field {
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        background: #000;
+
+    &:after {
+        content: "";
+        width: 100%;
+        height: 0;
+        display: block;
     }
 }
