Begining of about page

--- a/src/sections/about.pug
+++ b/src/sections/about.pug
@@ -1,19 +1,16 @@
 section.about
     .about__left
         +image('content/user.jpg', 'user__pic')
-        .user-data
-            .container
-
-                ul.user-data__list
-                    li.user-data__item
-                        .user-data__item_title Проживаю:
-                        .user-data__item_field Таллинн
-                    li.user-data__item
-                        .user-data__item_title Возраст:
-                        .user-data__item_field 27
-                    li.user-data__item
-                        .user-data__item_title Родился:
-                        .user-data__item_field 14 ноября 1991
+        ul.user-data
+            li.user-data__item
+                .user-data__item_title Проживаю:
+                .user-data__item_field Таллинн
+            li.user-data__item
+                .user-data__item_title Возраст:
+                .user-data__item_field 27
+            li.user-data__item
+                .user-data__item_title Родился:
+                .user-data__item_field 14 ноября 1991
     .about__right
         .user-about
             .user-about__greeting Привет, меня зовут
