Skills section layout

--- a/src/sections/about.pug
+++ b/src/sections/about.pug
@@ -15,7 +15,6 @@ section.about
         .user-about
             .user-about__greeting Привет, меня зовут
             .user-about__name Сергей Дмитриев
-            .user-about__content
-                p   Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus atque adipisci velit necessitatibus dolorem corporis vero neque impedit non amet!
-                p   Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe corrupti, fuga dignissimos at officia non tempora similique esse repudiandae numquam.
+            .user-about__content Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus atque adipisci velit necessitatibus dolorem corporis vero neque impedit non amet!
+            .user-about__description Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe corrupti, fuga dignissimos at officia non tempora similique esse repudiandae numquam.
                 
