Added works slider bloсk

--- a/src/styles/blocks/skills.pcss
+++ b/src/styles/blocks/skills.pcss
@@ -1,6 +1,6 @@
 .skills {
     text-align: left;
-    padding: 65px 160px 0 0;
+    padding: 65px 160px;
     background: url("../images/bg/bg_skills.jpg") top center no-repeat;
     background-size: cover;
     min-width: 100vw;
@@ -88,6 +88,7 @@
     }
 
     &-image {
-        margin-bottom: -90px;
+        margin-bottom: -155px;
+        margin-left: -160px;
     }
 }
