--- a/src/styles/blocks/main.pcss
+++ b/src/styles/blocks/main.pcss
@@ -2,7 +2,8 @@
     padding: 65px 160px;
     background: url("../images/bg/bg_main.jpg") top center no-repeat;
     background-size: cover;
-    min-height: 100vh;
+    height: 100vh;
+    min-height: 650px;
     min-width: 100vw;
     text-align: center;
     display: flex;
