Made works section

--- a/src/sections/works.pug
+++ b/src/sections/works.pug
@@ -22,6 +22,6 @@ section.works
                 h3.works__description_title Сайт школы образования
                 .works__description_content
                     p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, molestias odio. Qui beatae delectus non, accusantium sint molestias veniam in?
-                .works__description_link
+                a(href="#").works__description_link
                     +icon('link', 'works__description_icon')
                     span Посмотреть сайт
