--- a/src/styles/blocks/about.pcss
+++ b/src/styles/blocks/about.pcss
@@ -3,7 +3,7 @@
     padding: 65px 160px;
     background: url("../images/bg/bg_about.jpg") top center no-repeat;
     background-size: cover;
-    min-width: 100vw;
+    width: 100vw;
     padding-bottom: 200px;
     text-align: center;
     display: flex;
