--- a/src/styles/blocks/main.pcss
+++ b/src/styles/blocks/main.pcss
@@ -4,7 +4,7 @@
     background-size: cover;
     height: 100vh;
     min-height: 650px;
-    min-width: 100vw;
+    width: 100vw;
     text-align: center;
     display: flex;
     align-items: center;
