--- a/src/styles/blocks/skills.pcss
+++ b/src/styles/blocks/skills.pcss
@@ -51,6 +51,7 @@
         font-weight: 700;
         position: relative;
         display: inline-block;
+        vertical-align: top;
         margin-right: 30px;
         margin-bottom: 30px;
 
@@ -71,7 +72,7 @@
         position: absolute;
         left: 50%;
         top: 50%;
-        transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%) rotate(180deg);
         fill: transparent;
     }
 
