--- a/src/styles/blocks/works.pcss
+++ b/src/styles/blocks/works.pcss
@@ -1,7 +1,7 @@
 .works {
     text-align: left;
     padding: 150px 160px 65px;
-    min-width: 100vw;
+    width: 100vw;
     text-align: center;
 
     &__title {
