--- a/src/sections/reviews.pug
+++ b/src/sections/reviews.pug
@@ -1,25 +1,32 @@
 section.reviews
-    h2.reviews__title Что обо мне говорят
-    .reviews__arrows
-        .reviews__arrow_left <
-        .reviews__arrow_right >
-
+    .reviews__top-block 
+        h2.reviews__title Что обо мне говорят
+        .reviews__arrows
+            .reviews__arrows_left.reviews__arrows__circle
+                +icon('arrow-right', 'reviews__arrows__circle_icon')
+            .reviews__arrows_right.reviews__arrows__circle
+                +icon('arrow-right', 'reviews__arrows__circle_icon')
+    
     .reviews__container
         .reviews__block
             .reviews__quotes
-                +icon('quote', 'review__quotes_icon')
+                +icon('quote', 'reviews__quotes_icon')
             .reviews__content
-                p Lorem ipsum dolor sit amet consectetur adipisicing elit. Non provident aspernatur maiores eius aliquam nostrum cupiditate eum quidem! Amet, officia.
+                article.reviews__article Lorem ipsum dolor sit amet consectetur adipisicing elit. Non provident aspernatur maiores eius aliquam nostrum cupiditate eum quidem! Amet, officia.
                 .reviews__person
-                    img(class="reviews__person_image" src="person1.jpg")
-                    .reviews__person_name Ковальчук Дмитрий
-                    .reviews__person_position Основатель Loftschool
+                    .reviews__person_left
+                        +image('content/user.jpg', 'reviews__person_image')
+                    .reviews__person_right
+                        .reviews__person_name Ковальчук Дмитрий
+                        .reviews__person_position Основатель Loftschool
         .reviews__block
             .reviews__quotes
-                +icon('quote', 'review__quotes_icon')
+                +icon('quote', 'reviews__quotes_icon')
             .reviews__content
-                p Lorem ipsum dolor sit amet consectetur adipisicing elit. Non provident aspernatur maiores eius aliquam nostrum cupiditate eum quidem! Amet, officia.
+                article.reviews__article Lorem ipsum dolor sit amet consectetur adipisicing elit. Non provident aspernatur maiores eius aliquam nostrum cupiditate eum quidem! Amet, officia.
                 .reviews__person
-                    img(class="reviews__person_image" src="person2.jpg")
-                    .reviews__person_name Владимир Сабанцев
-                    .reviews__person_position Преподаватель
+                    .reviews__person_left
+                            +image('content/user.jpg', 'reviews__person_image')
+                    .reviews__person_right
+                        .reviews__person_name Владимир Сабанцев
+                        .reviews__person_position Преподаватель
