--- a/src/sections/footer.pug
+++ b/src/sections/footer.pug
@@ -16,10 +16,10 @@ footer.footer
             .footer__info
                 .footer__info_about
                 .footer__socials
-                    ul.socials__list
+                    ul.footer__socials__list
                         each social in ['insta', 'vk', 'github']
-                            li.socials__item
-                                a(class=`social__list.social__list_${social}` href="#")
+                            li.footer__socials__item
+                                a(href="#").footer__socials__link
                                     +icon(`${social}`, `${social}`)
             .footer__quote
                 .footer__quote_body Всегда пишите так, будто сопровождать его будет склонный к насилию психопат, который знает где вы живёте 
