Cleaned 2 first sections

--- a/src/index.pug
+++ b/src/index.pug
@@ -14,7 +14,7 @@ body
             //- +icon('link', 'link-class')
             //- .icon-bg
             //- include ./sections/header.pug
-            include ./sections/main.pug
+            include ./sections/hero.pug
             include ./sections/about.pug
             include ./sections/skills.pug
             include ./sections/works.pug
