--- a/src/sections/skills.pug
+++ b/src/sections/skills.pug
@@ -1,7 +1,7 @@
 section.skills
     .container
-        h2.skills__title Чем я могу быть полезен вам
-        .skills__content Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
+        h2.title.title--skills Чем я могу быть полезен вам
+        .content Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
         .skills__part
             h3.skills__part_title Front-end
             .skills__part_content
