Added new blocks

--- a/src/sections/hero.pug
+++ b/src/sections/hero.pug
@@ -3,8 +3,8 @@ section.hero
         include header
 
         h1.hero-title
-            .title__info Личный сайт веб разработчика
-            .title__name Сергей Дмитриев
+            .hero-title__info Личный сайт веб разработчика
+            .hero-title__name Сергей Дмитриев
 
         .scroll
             .scroll__title Скролл
