--- a/src/styles/blocks/container.pcss
+++ b/src/styles/blocks/container.pcss
@@ -10,4 +10,18 @@
         flex-direction: column;
         padding-bottom: 400px;
     }
+
+    &--about {
+        display: flex;
+        justify-content: space-evenly;
+        padding-top: 65px;
+        padding-bottom: 190px;
+    }
+
+    &__skills {
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+        flex-direction: row-reverse;
+    }
 }
