--- a/src/styles/sections/skills.pcss
+++ b/src/styles/sections/skills.pcss
@@ -2,81 +2,12 @@
     padding: 65px 160px;
     background: url("../images/bg/bg_skills.jpg") top center no-repeat;
     background-size: cover;
-    min-width: 100vw;
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
-    flex-direction: row-reverse;
+    width: 100vw;
 
     &__content {
-        opacity: 0.5;
-        color: #fff;
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 30px;
-        max-width: 600px;
+        padding-bottom: 80px;
     }
-    &__part {
-        padding: 20px 130px;
-        padding-right: 0;
-
-        &_title {
-            color: #fff;
-            font-size: 24px;
-            font-weight: 700;
-            line-height: 48px;
-            margin-bottom: 15px;
-            white-space: nowrap;;
-        }
-    }
-    &__list {
+    /* &__list {
         display: block;
-    }
-    &__item {
-        color: rgba(255, 255, 255, .5);
-        font-size: 18px;
-        font-weight: 700;
-        position: relative;
-        display: inline-block;
-        vertical-align: top;
-        margin-right: 30px;
-        margin-bottom: 30px;
-
-        &_container {
-            width: 135px;
-            height: 135px;
-            border: 3px solid transparent;
-            border-radius: 135px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        &_name {
-            text-align: center;
-        }
-    }
-    &__level {
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%) rotate(180deg);
-        fill: transparent;
-    }
-
-    &__circle {
-        &_under {
-            stroke: #fff;
-            opacity: .1;
-        }
-        &_above {
-            stroke: orange;
-            stroke-width: 9px;
-            stroke-dasharray: 100 346;
-        }
-    }
-
-    &-image {
-        margin-bottom: -155px;
-        margin-left: -160px;
-    }
+    } */
 }
