--- a/src/styles/blocks/title.pcss
+++ b/src/styles/blocks/title.pcss
@@ -3,5 +3,12 @@
     font-size: 30px;
     font-weight: 700;
     line-height: 36px;
-    margin-bottom: 50px;
+    padding-bottom: 50px;
+
+    &--small {
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 48px;
+        padding-bottom: 15px;
+    }
 }
