--- a/src/styles/sections/about.pcss
+++ b/src/styles/sections/about.pcss
@@ -1,14 +1,7 @@
 .about {
-    text-align: left;
-    padding: 65px 160px;
     background: url("../images/bg/bg_about.jpg") top center no-repeat;
     background-size: cover;
     width: 100vw;
-    padding-bottom: 200px;
-    text-align: center;
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-evenly;
 
     &__left {
         display: inline-block;
@@ -20,5 +13,9 @@
         max-width: 600px;
         text-align: left;
     }
+    &__content {
+        margin-bottom: 90px;
+    }
+
 }
 
